Thu Aug 27 02:06:11 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (enc/unicode/name2ctype.kwd):
	  remove rules to generate name2ctype.kwd from
	  UnicodeData.txt and Scripts.txt.
	  if you want to generate, use tool/enc-unicode.rb.

Thu Aug 27 02:00:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* unicode.c (PROPERTY_NAME_MAX_SIZE): use MAX_WORD_LENGTH.

Wed Aug 26 23:59:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): refined error message.

	* random.c (random_rand): fixed for edge cases of ranges.
	  [ruby-dev:39166]

Wed Aug 26 21:49:23 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/tempfile.rb: add documents from Hongli Lai's fork.
	  cf [ruby-core:25131].

Wed Aug 26 19:51:13 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/mkconfig.rb (program_transform_name): fix for multiple trans
	  rules for autoconf 2.61 or earlier.

	* tool/rbinstall.rb (program_transform_name): ditto.

Wed Aug 26 19:20:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): unified random_int and random_float.
	  [ruby-dev:39158].  and fixes [ruby-core:24655], [ruby-core:24677],
	  [ruby-core:24679].

Wed Aug 26 18:59:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/test_tempfile.rb: merged from Hongli Lai's fork.
	  cf [ruby-core:25131].

Wed Aug 26 18:49:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#close!): should not undefine finalizer
	  by just unlink.

Wed Aug 26 17:00:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb (program_transform_name): fix for autoconf 2.61
	  or earlier.

Wed Aug 26 14:34:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#close!, Tempfile#path): added side
	  notes from Hongli Lai's fork.

	* lib/tempfile.rb (Tempfile#unlink, Tempfile.callback): do nothing
	  any more once unlinked.

Wed Aug 26 13:48:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
